--- a/test.html
+++ b/test.html
@@ -5,11 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        input{
+            border-color: #777;
+        }
+        main{
+          display: none;
+        }
+    </style>
 </head>
 <body>
     <div id="enonse">
 
     </div>
-    <script src="Enonse7.js"></script>
+    <main>
+        <div class="group">
+          <input type='text' />
+        </div>
+        <br>
+        <div class="group">
+          <input type='text' />
+        </div>
+        <br>
+        <div class="group">
+          <input type='text' />
+        </div>
+        <br>
+        <div class="group">
+          <input type='text' />
+        </div>
+        <br>
+        <div class="group">
+          <input type='text' />
+        </div>
+        <button type="button" id="next">NEXT</button>
+      </main>
+
+      <button id='action'>AKSYON</button>
+      <hr>
+      <div>
+        <label>Tape aksyon ou vle simile sou bouton ki anlè a, nan lis sa [click, dblclick, aksyonpam]<br>Epi peze ENTER sou klavye a pou w valide</label><br>
+        <input type="text" name='event-name' placeholder="Non aksyon an..."/>
+      </div>
+      <div id="resultat"></div>
+    <script src="Enonse9.js"></script>
 </body>
 </html>
