--- a/test.html
+++ b/test.html
@@ -5,49 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        input{
-            border-color: #777;
-        }
-        main{
-          display: none;
-        }
-    </style>
 </head>
+<style>
+  main{
+    margin: 0px;
+    display: none;
+  }
+
+  p, h1{
+    padding: 20px;
+    padding-bottom: 3px;
+  }
+  #souri{
+    width: 300px;
+    height: 300px;
+    background-color: #000;
+    margin: 20px;
+  }
+</style>
 <body>
     <div id="enonse">
 
     </div>
-    <main>
-        <div class="group">
-          <input type='text' />
-        </div>
-        <br>
-        <div class="group">
-          <input type='text' />
-        </div>
-        <br>
-        <div class="group">
-          <input type='text' />
-        </div>
-        <br>
-        <div class="group">
-          <input type='text' />
-        </div>
-        <br>
-        <div class="group">
-          <input type='text' />
-        </div>
-        <button type="button" id="next">NEXT</button>
-      </main>
-
-      <button id='action'>AKSYON</button>
-      <hr>
-      <div>
-        <label>Tape aksyon ou vle simile sou bouton ki anlè a, nan lis sa [click, dblclick, aksyonpam]<br>Epi peze ENTER sou klavye a pou w valide</label><br>
-        <input type="text" name='event-name' placeholder="Non aksyon an..."/>
-      </div>
-      <div id="resultat"></div>
-    <script src="Enonse9.js"></script>
+    <main id="main">
+      <h1>What is Lorem Ipsum?</h1>
+      <p> 
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+        dummy text ever since the 1500s, when an unknown 
+        printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also 
+        the leap into electronic typesetting, 
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
+        more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+      </p>
+      <button id="copy">📋</button>
+    </main>
+    <div id="souri"></div>
+    <script src="Enonse11.js"></script>
 </body>
 </html>
