--- a/test.html
+++ b/test.html
@@ -7,39 +7,28 @@
     <title>Document</title>
 </head>
 <style>
-  main{
-    margin: 0px;
-    display: none;
-  }
-
-  p, h1{
+  h1{
     padding: 20px;
     padding-bottom: 3px;
   }
-  #souri{
-    width: 300px;
-    height: 300px;
-    background-color: #000;
-    margin: 20px;
+  #timer{
+    border-top:solid black 3px;
+    border-left: solid black 1px;
+   font-weight: bold;
+    padding: 10px;
+    width: 70px;
+    padding-bottom: 30px;
+
   }
+  
 </style>
 <body>
-    <div id="enonse">
-
+  <main>
+    <button id="api">Get data</button>
+    <div class="data-wrapper">
+    
     </div>
-    <main id="main">
-      <h1>What is Lorem Ipsum?</h1>
-      <p> 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s, when an unknown 
-        printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also 
-        the leap into electronic typesetting, 
-        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
-        more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-      </p>
-      <button id="copy">📋</button>
-    </main>
-    <div id="souri"></div>
-    <script src="Enonse11.js"></script>
+  <main>
+    <script src="Enonse13.js"></script>
 </body>
 </html>
