--- a/test.html
+++ b/test.html
@@ -5,30 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<style>
-  h1{
-    padding: 20px;
-    padding-bottom: 3px;
-  }
-  #timer{
-    border-top:solid black 3px;
-    border-left: solid black 1px;
-   font-weight: bold;
-    padding: 10px;
-    width: 70px;
-    padding-bottom: 30px;
-
-  }
-  
-</style>
-<body>
-  <main>
-    <button id="api">Get data</button>
-    <div class="data-wrapper">
+    <style>
+     p strong{
+      color: green;
+      font-weight: bold;
+     }
     
-    </div>
-  <main>
-    <script src="Enonse13.js"></script>
+    </style>
+</head>
+<body>
+  <div>
+    <form id="form">
+       <input type="text" name="non" placeholder="Search..." >
+       <button type="submit">SEARCH</button>
+    </form>
+    
+    <p>Vulputate mi sit amet mauris. Aliquam ut porttitor leo a diam sollicitudin. Odio euismod lacinia at quis risus sed. Id diam maecenas ultricies mi eget mauris pharetra. Euismod elementum nisi quis eleifend quam adipiscing. Enim sit amet venenatis urna. At imperdiet dui accumsan sit amet nulla facilisi morbi. Non enim praesent elementum facilisis. Sagittis orci a scelerisque purus semper eget duis. Eget magna fermentum iaculis eu non diam phasellus.</p>
+  
+    <p>Scelerisque varius morbi enim nunc faucibus a pellentesque. Diam vel quam elementum pulvinar etiam non quam. Ante metus dictum at tempor. Adipiscing enim eu turpis egestas. Dignissim sodales ut eu sem integer vitae justo. Sed risus pretium quam vulputate dignissim. Sit amet volutpat consequat mauris nunc congue. Magna eget est lorem ipsum dolor sit amet. Ac placerat vestibulum lectus mauris ultrices eros in cursus. Egestas integer eget aliquet nibh praesent tristique magna sit amet.</p>
+  
+  </div>
+  <script src="Enonse16.js"></script>
 </body>
 </html>
